<resources>
    <string name="app_name">AmarPharmacy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?Sign up!</string>
    <string name="logo">Logo</string>
    <string name="todo1">TODO</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="password_at_least_8_character">Password (at least 8 character)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or1">or</string>
    <string name="email_id1">Email ID</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lt_lt_go_back"><![CDATA[< < Go Back]]></string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery email sent successfully! Check your Inbox.</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">search</string>
    <string name="notification">notification</string>
    <string name="whitecart">whitecart</string>
    <string name="not_signed_in">Not Signed in</string>
    <string name="email_address">Email Address</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="amar_pharmacy">Amar Pharmacy</string>
    <string name="home">Home</string>
    <string name="covid_19_special">COVID-19 Special</string>
    <string name="view_all">View All</string>
    <string name="all_products">All Products</string>
    <string name="button">Button</string>
    <string name="view_all2">View All</string>
    <string name="clungene_covi">Clungene Covi...</string>
    <string name="product_title">Product Title</string>
    <string name="product_price1">Product Price</string>
    <string name="a1_699_00">৳699.00</string>
    <string name="monday">Monday</string>
    <string name="description">Description</string>
    <string name="specfication">Specfication</string>
    <string name="add_to_cart">ADD To CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="total_ammount">Total Ammount</string>
    <string name="_699_00">৳699.00</string>
    <string name="total_amount">Total Amount</string>
    <string name="blood_pressure_machine">Blood Pressure Machine.....</string>
    <string name="price_2_items">Price (2 Items)</string>
    <string name="free">Free</string>
    <string name="my_cart">My Cart</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="todo">TODO</string>
    <string name="continue1">CONTINUE</string>
</resources>